--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -3,6 +3,6 @@
     <a href="https://github.com/kaarthik-raja/Webops">Code-Github</a> |
     <a href="https://facebook.com/kaarthikraja.m.v">Facebook</a> |
     <a href="#">7598459854</a> |
-    <a href="http://mail.google.com/mail/?view=cm&fs=1&tf=1&to=&su=kaarthikrajamv@gmail.com">kaarthikrajamv@gmail.com</a>
+    <a href="http://mail.google.com/mail/?view=cm&fs=1&tf=1&to=kaarthikrajamv@gmail.com&su=Shaastra_Application">kaarthikrajamv@gmail.com</a>
   </p>
 </div>
