--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -16,7 +16,7 @@
         </li>
 
         <li ng-show="$ctrl.isAdmin()" ui-sref-active="active"><a ui-sref="admin">Admin</a></li>
-        <li ng-show="$ctrl.isLoggedIn() &&" ui-sref-active="active"><a ui-sref="post">Posts</a></li>
+        <li ng-show="$ctrl.isLoggedIn() " ui-sref-active="active"><a ui-sref="post">Posts</a></li>
 
       </ul>
 
