--- a/client/app/app.css
+++ b/client/app/app.css
@@ -47,6 +47,7 @@
 @import 'admin/admin.css';
 @import 'main/main.css';
 @import 'post/post.css';
+@import 'selectuser/selectuser.css';
 @import '../components/footer/footer.css';
 @import '../components/modal/modal.css';
 @import '../components/oauth-buttons/oauth-buttons.css';
